tests/help.txt
array()
for()
foreach()

array_key_exists('cle', $array);
in_array('valeur', $array);
array_search('valeur', $array);

isset();

transtypage
$_GET['valeur'] = (int) $_GET['valeur'];

$_POST

htmlspecialchars();
strip_tags();

$_FILES['monfichier']['name']
$_FILES['monfichier']['type']
$_FILES['monfichier']['size']
$_FILES['monfichier']['tmp_name']
$_FILES['monfichier']['error']

pathinfo();

$_SERVER
$_SERVER['REMOTE_ADDR'] -> pour avoir l'ip de l'user qui demande la page
$_ENV
$_SESSION
$_COOKIE
$_GET
$_POST
$_FILES

session_start();
session_destroy();

setcookie();
time();
<?php setcookie('pseudo', 'M@teo21', time() + 365*24*3600, null, null, false, true); ?>

fopen();
fclose();
fgetc();
fgets();
fputs();
fseek();
fseek($monfichier, 0);

mysqli_
try{}catch{}

query(); = requête
fetch(); = va chercher
closeCursor();

SELECT
FROM
WHERE
ORDER BY
LIMIT

prepare();
execute();

marqueurs nominatifs
array associatif

new PDO('mysql:host=localhost;dbname=test;charset=utf8', 'root', '', array(PDO::ATTR_ERRMODE => PDO::ERRMODE_EXCEPTION));

INSERT INTO table() VALUES()
exec();

UPDATE
DELETE FROM

header('Location: .php');

les fonctions scalaires
SELECT UPPER() AS
LOWER()
LENGTH()
ROUND()
http://dev.mysql.com/doc/refman/5.0/en/numeric-functions.html
http://dev.mysql.com/doc/refman/5.0/en/string-functions.html

les fonctions d'agrégat
SELECT AVG() AS
SUM()
MAX()
MIN()
COUNT()
COUNT(DISTINCT )

GROUP BY
HAVING

DATE AAAA-MM-JJ
TIME HH:MM:SS
DATETIME AAAA-MM-JJ HH:MM:SS
TIMESTAMP AAAAMMJJHHMMSS
YEAR AAAA

BETWEEN

http://dev.mysql.com/doc/refman/5.7/en/date-and-time-functions.html

NOW()
CURDATE()
CURTIME()

DAY()
MONTH()
YEAR()

HOUR()
MINUTE()
SECOND()

DATE_FORMAT ()
http://dev.mysql.com/doc/refman/5.7/en/date-and-time-functions.html#function_date-format

DATE_ADD()
DATE_SUB()

empty()

jointure interne

WHERE (ancienne syntaxe)
table.champ

JOIN
INNER JOIN ... ON

jointure externe

LEFT JOIN
RIGHT JOIN

header ("Content-type: image/png");
imagecreate();

imagecreatefromjpeg();
imagecreatefrompng();

imagejpeg();
imagepng();

imagecolorallocate($image, r, v, b);
imagestring($image, $police, $x, $y, $texte_a_ecrire, $couleur);
imagestringup(); idem à la verticale

ImageSetPixel ($image, $x, $y, $couleur);
ImageLine ($image, $x1, $y1, $x2, $y2, $couleur);
ImageEllipse ($image, $x, $y, $largeur, $hauteur, $couleur);
ImageRectangle ($image, $x1, $y1, $x2, $y2, $couleur);
ImagePolygon ($image, $array_points, $nombre_de_points, $couleur);

imagecolortransparent($image, $couleur);

imagesx($source);
imagesy($source);
imagecopymerge($destination, $source, $destination_x, $destination_y, 0, 0, $largeur_source, $hauteur_source, 60);

imagecreatetruecolor();
imagecopyresampled($destination, $source, 0, 0, 0, 0, $largeur_destination, $hauteur_destination, $largeur_source, $hauteur_source);

PCRE
preg_
preg_grep();
preg_split();
preg_quote();
preg_match();
preg_match_all();
preg_replace();
preg_replace_callback();

#

^ (accent circonflexe) : indique le début d'une chaîne
$ (dollar) : indique la fin d'une chaîne

?
+
*
[]
{}
()

Des classes de caractères
Les intervalles de classe
Les quantificateurs
Les métacaractères (caractères spéciaux)
# ! ^ $ ( ) [ ] { } ? + * . \ |
Les classes abrégées

#^0[1-68]([-. ]?[0-9]{2}){4}$# pour le numéro de téléphone FR
#^[a-z0-9._-]+@[a-z0-9._-]{2,}\.[a-z]{2,4}$# pour le mail

parser
bbCode

méthodes magiques
__construct
__destruct
__get

héritage
extends

encapsulation
public
private
protected

design patterns

MVC

bindParam();
singleton ?

contrôleur global

hachage
site RPX

Référence fonctions PHP doc : http://php.net/manual/fr/funcref.php

Parse error
Undefined function
Wrong parameter count